fix z-index

--- a/src/css/betterttv.css
+++ b/src/css/betterttv.css
@@ -1673,7 +1673,7 @@ body.channel_new.columns.ember-application {
 
     /* temp for holiday emotes*/
     position: relative;
-    z-index: 5;
+    z-index: 2;
 }
 
 /* Emoji */
